@@ -1,28 +1,25 @@
 package com.bespectacled.modernbeta.world.cavebiome.provider;
 
-import java.util.Arrays;
 import java.util.List;
 
 import com.bespectacled.modernbeta.api.world.cavebiome.CaveBiomeProvider;
-import com.bespectacled.modernbeta.world.biome.OldBiomeSource;
-
+import net.minecraft.nbt.NbtCompound;
 import net.minecraft.util.registry.Registry;
 import net.minecraft.util.registry.RegistryKey;
 import net.minecraft.world.biome.Biome;
 
 public class NoCaveBiomeProvider extends CaveBiomeProvider {
-    public NoCaveBiomeProvider(OldBiomeSource biomeSource) {
-        super(biomeSource);
+    public NoCaveBiomeProvider(long seed, NbtCompound settings) {
+        super(seed, settings);
     }
 
     @Override
-    public Biome getBiomeForNoiseGen(Registry<Biome> biomeRegistry, int biomeX, int biomeY, int biomeZ) {
+    public Biome getBiome(Registry<Biome> biomeRegistry, int biomeX, int biomeY, int biomeZ) {
         return null;
     }
 
     @Override
     public List<RegistryKey<Biome>> getBiomesForRegistry() {
-        return Arrays.asList();
+        return List.of();
     }
-
 }
